tests/baselines/reference/exportStarForValues7(strict=true).errors.txt
file1.ts(1,24): error TS7008: Member 'x' implicitly has an 'any' type.


==== file1.ts (1 errors) ====
    export interface Foo { x }
                           ~
!!! error TS7008: Member 'x' implicitly has an 'any' type.
    
==== file2.ts (0 errors) ====
    export * from "file1"
    export var x = 1;
    
==== file3.ts (0 errors) ====
    export * from "file2"
    export var x = 1;